; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_group_service_tree_add.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_group_service_tree_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfq_rb_root = type { i32 }
%struct.cfq_group = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cfq_rb_root*, %struct.cfq_group*)* @cfq_group_service_tree_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cfq_group_service_tree_add(%struct.cfq_rb_root* %0, %struct.cfq_group* %1) #0 {
  %3 = alloca %struct.cfq_rb_root*, align 8
  %4 = alloca %struct.cfq_group*, align 8
  store %struct.cfq_rb_root* %0, %struct.cfq_rb_root** %3, align 8
  store %struct.cfq_group* %1, %struct.cfq_group** %4, align 8
  %5 = load %struct.cfq_group*, %struct.cfq_group** %4, align 8
  %6 = getelementptr inbounds %struct.cfq_group, %struct.cfq_group* %5, i32 0, i32 1
  %7 = call i32 @RB_EMPTY_NODE(i32* %6)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUG_ON(i32 %10)
  %12 = load %struct.cfq_group*, %struct.cfq_group** %4, align 8
  %13 = call i32 @cfq_update_group_weight(%struct.cfq_group* %12)
  %14 = load %struct.cfq_rb_root*, %struct.cfq_rb_root** %3, align 8
  %15 = load %struct.cfq_group*, %struct.cfq_group** %4, align 8
  %16 = call i32 @__cfq_group_service_tree_add(%struct.cfq_rb_root* %14, %struct.cfq_group* %15)
  %17 = load %struct.cfq_group*, %struct.cfq_group** %4, align 8
  %18 = getelementptr inbounds %struct.cfq_group, %struct.cfq_group* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.cfq_rb_root*, %struct.cfq_rb_root** %3, align 8
  %21 = getelementptr inbounds %struct.cfq_rb_root, %struct.cfq_rb_root* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %23, %19
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %21, align 4
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @RB_EMPTY_NODE(i32*) #1

declare dso_local i32 @cfq_update_group_weight(%struct.cfq_group*) #1

declare dso_local i32 @__cfq_group_service_tree_add(%struct.cfq_rb_root*, %struct.cfq_group*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
